src/tests/testfiles/variable-declarations/9.txt
Error at 5:5: Binary operator operands must have the same type (have char and char[])
*hello = "uu"; // error
^
